force-app/main/default/objects/Pilot__c/fields/Experience_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Years__c</fullName>
    <label>Experience in Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>5-20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>