force-app/main/default/objects/Pilot__c/validationRules/Date_of_Birth_Mandatory_for_male_Pilot.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Mandatory_for_male_Pilot</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( DOB__c )  &amp;&amp;  ISPICKVAL( Gender__c , &apos;Male&apos;)  &amp;&amp;  ($Profile.Name = &apos;Flight Operators&apos;)</errorConditionFormula>
    <errorMessage>Date is Mandatory</errorMessage>
</ValidationRule>