force-app/main/default/objects/Pilot__c/validationRules/Pilot_Age_must_be_Greater_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Pilot_Age_must_be_Greater_than_18</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &lt; 18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Pilot Age must not be less than 18</errorMessage>
</ValidationRule>