force-app/main/default/objects/Pilot__c/validationRules/Prevent_same_First_and_Last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_same_First_and_Last_Name</fullName>
    <active>true</active>
    <errorConditionFormula>First_Name__c  =  Last_Name__c</errorConditionFormula>
    <errorMessage>First Name and Last Name cannot be same</errorMessage>
</ValidationRule>