force-app/main/default/objects/Pilot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <columns>Pan_Card__c</columns>
    <columns>Experience_in_Years__c</columns>
    <columns>Level__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>